Correct image distortion

--- a/starterOnly/modal.css
+++ b/starterOnly/modal.css
@@ -459,6 +459,7 @@ input[data-error]::after {
 }
 .hero-img img {
   width: 100%;
+  object-fit: cover;
   height: 100%;
   display: block;
   padding: 0;
